modified:   src/app/contact/clients/clients.component.scss 	modified:   src/app/contact/clients/clients.component.ts 	modified:   src/app/contact/contact.component.html 	modified:   src/app/contact/contact.component.scss 	modified:   src/app/facilities/facilities.component.scss 	modified:   src/app/footer/footer.component.html

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Maycare2</title>
+  <title>Palo Alto Care Homes</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
